--- a/app/public/index.html
+++ b/app/public/index.html
@@ -24,23 +24,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Candy Drop</title>
-    <meta name="title" content="Candy Drop" />
-    <meta name="description" content="Mint a limited NFT drop on Solana." />
+    <meta name="title" content="Camphor Drop" />
+    <meta name="description" content="Mint a Totoro NFT on Solana." />
     
     <!-- Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://buildspace.so/">
-    <meta property="og:title" content="Candy Drop">
-    <meta property="og:description" content="Mint a limited NFT drop on Solana.">
-    <meta property="og:image" content="https://s3.amazonaws.com/cdn.buildspace.so/courses/solana-nft/metadata.png">
+    <meta property="og:url" content="https://nft-drop-starter-project-kzc959ooq-aftr101.vercel.app/">
+    <meta property="og:title" content="Camphor Drop">
+    <meta property="og:description" content="Mint a Totoro NFT on Solana.">
+    <meta property="og:image" content="https://adwallpapers.xyz/uploads/posts/234257-night-anime-space-sky-Earth-Moon-moonlight-Totoro-My-Neighbor-Totoro-astronomy-Hayao-Miyazaki-cloud-darkness-screenshot-atmosphere-of-earth-outer-space-astronomical-obje.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://buildspace.so/">
-    <meta property="twitter:title" content="Candy Drop">
-    <meta property="twitter:description" content="Mint a limited NFT drop on Solana.">
+    <meta property="twitter:url" content="https://nft-drop-starter-project-kzc959ooq-aftr101.vercel.app/">
+    <meta property="twitter:title" content="Camphor Drop">
+    <meta property="twitter:description" content="Mint a Totoro NFT on Solana.">
     <meta property="twitter:image"
-      content="https://s3.amazonaws.com/cdn.buildspace.so/courses/solana-nft/metadata.png">
+      content="https://adwallpapers.xyz/uploads/posts/234257-night-anime-space-sky-Earth-Moon-moonlight-Totoro-My-Neighbor-Totoro-astronomy-Hayao-Miyazaki-cloud-darkness-screenshot-atmosphere-of-earth-outer-space-astronomical-obje.jpg">
     </head>
   </head>
   <body>
